--- a/style.css
+++ b/style.css
@@ -43,10 +43,7 @@ body{
  
 .panel h2{
     font-size: 24px;
-    bottom: 20px;
-    left: 20px;
-    margin: 0;
-    position: absolute;
+text-alighn:center;
     opacity: 0;
 }
 .panel.active{
