--- a/style.css
+++ b/style.css
@@ -42,9 +42,10 @@ body{
 }
  
 .panel h2{
+    text-shadow: 2px 2px #000000;
     font-size: 24px;
-text-alighn:center;
     opacity: 0;
+    text-align: center;
 }
 .panel.active{
     flex: 5;
