--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
  *{
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: sans-serif; 
 }
 
 body{
-    font-family: sans-serif; 
+    
     background-color: rgb(29, 29, 29);
     color: aliceblue;
     text-align: center;
@@ -23,7 +26,12 @@ body{
     height:100vh; 
     overflow: hidden;
     margin: 0;
-    width: 90vw;
+    width: 100vw;
+}
+.gallery{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .panel{
@@ -48,7 +56,8 @@ body{
     text-align: center;
 }
 .panel.active{
-    flex: 3;
+    flex: 5;
+    width: 80vw;
 }
 .panel.panel.active h2{
     opacity: 1;
